pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDLParser.java
// $ANTLR 3.5 /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g 2013-10-26 21:34:31

	package pl.poznan.put.cs.gui4pddl.parser;
	
	import java.util.LinkedList;
	import java.util.List;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class PDDLParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "FALSE", "INTEGER", 
		"NAME", "REQUIRE_KEY", "TRUE", "VARIABLE", "WS", "'('", "')'", "'-'", 
		"':action'", "':axiom'", "':constants'", "':context'", "':domain'", "':domain-variables'", 
		"':effect'", "':expansion'", "':extends'", "':goal'", "':implies'", "':init'", 
		"':length'", "':maintain'", "':method'", "':objects'", "':only-in-expansions'", 
		"':parallel'", "':parameters'", "':precondition'", "':predicates'", "':requirements'", 
		"':safety'", "':serial'", "':situation'", "':timeless'", "':types'", "':vars'", 
		"'and'", "'change'", "'define'", "'domain'", "'either'", "'exists'", "'fluent'", 
		"'forall'", "'imply'", "'not'", "'or'", "'problem'", "'situation'", "'when'"
	};
	public static final int EOF=-1;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int COMMENT=4;
	public static final int FALSE=5;
	public static final int INTEGER=6;
	public static final int NAME=7;
	public static final int REQUIRE_KEY=8;
	public static final int TRUE=9;
	public static final int VARIABLE=10;
	public static final int WS=11;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public PDDLParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public PDDLParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return PDDLParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g"; }


	    private List<PDDLError> errors = new LinkedList<PDDLError>();
	    public void displayRecognitionError(String[] tokenNames,
	                                        RecognitionException e) {
	        String hdr = getErrorHeader(e);
	        String msg = getErrorMessage(e, tokenNames);
	        PDDLError error = new PDDLError();
	        error.message = hdr + " " + msg;
	        error.line = e.line;
	        error.charPositionInLine = e.charPositionInLine;
	        errors.add(error);
	    }
	    public List<PDDLError> getErrors() {
	        return errors;
	    }
	    protected void exitSubtree(IntStream input) {
	    	int level = 0;
	    	int ttype = input.LA(1);
	    	while (ttype != Token.EOF) {
	    		if (ttype == 10) { // '('
	    		    level++;
	    		} else if (ttype == 11) { // ')'
	    			level--;
	    			if (level == 0) {
	    			    input.consume();
	    			    break;
	    			}
	    		}
	    		
	    		input.consume();
	    		ttype = input.LA(1);
	    	}
	    }
	    public void recover(IntStream input,
	           RecognitionException re) {
	           
	           if (re instanceof NoViableAltException ) {
			       exitSubtree(input);
			       
			       //consumeUntil(input, 11)
			       //input.consume();
		       } else {
			       super.recover(input,re);
		       }
	    }



	// $ANTLR start "pddl_file"
	// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:61:1: pddl_file : ( definition )* ;
	public final void pddl_file() throws RecognitionException {
		try {
			// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:62:5: ( ( definition )* )
			// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:62:10: ( definition )*
			{
			// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:62:10: ( definition )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==12) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:62:10: definition
					{
					pushFollow(FOLLOW_definition_in_pddl_file38);
					definition();
					state._fsp--;

					}
					break;

				default :
					break loop1;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "pddl_file"



	// $ANTLR start "definition"
	// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:65:1: definition : ( '(' 'define' problem_header ( problem_item )* ')' | '(' 'define' domain_header ( domain_item )* ')' | '(' 'define' initsit_header initsit_body ')' );
	public final void definition() throws RecognitionException {
		try {
			// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:66:2: ( '(' 'define' problem_header ( problem_item )* ')' | '(' 'define' domain_header ( domain_item )* ')' | '(' 'define' initsit_header initsit_body ')' )
			int alt4=3;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==12) ) {
				int LA4_1 = input.LA(2);
				if ( (LA4_1==45) ) {
					int LA4_2 = input.LA(3);
					if ( (LA4_2==12) ) {
						switch ( input.LA(4) ) {
						case 54:
							{
							alt4=1;
							}
							break;
						case 46:
							{
							alt4=2;
							}
							break;
						case 55:
							{
							alt4=3;
							}
							break;
						default:
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 4, 3, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:66:4: '(' 'define' problem_header ( problem_item )* ')'
					{
					match(input,12,FOLLOW_12_in_definition54); 
					match(input,45,FOLLOW_45_in_definition56); 
					pushFollow(FOLLOW_problem_header_in_definition58);
					problem_header();
					state._fsp--;

					// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:66:32: ( problem_item )*
					loop2:
					while (true) {
						int alt2=2;
						int LA2_0 = input.LA(1);
						if ( (LA2_0==12) ) {
							alt2=1;
						}

						switch (alt2) {
						case 1 :
							// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:66:32: problem_item
							{
							pushFollow(FOLLOW_problem_item_in_definition60);
							problem_item();
							state._fsp--;

							}
							break;

						default :
							break loop2;
						}
					}

					match(input,13,FOLLOW_13_in_definition63); 
					}
					break;
				case 2 :
					// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:67:4: '(' 'define' domain_header ( domain_item )* ')'
					{
					match(input,12,FOLLOW_12_in_definition68); 
					match(input,45,FOLLOW_45_in_definition70); 
					pushFollow(FOLLOW_domain_header_in_definition72);
					domain_header();
					state._fsp--;

					// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:67:31: ( domain_item )*
					loop3:
					while (true) {
						int alt3=2;
						int LA3_0 = input.LA(1);
						if ( (LA3_0==12) ) {
							alt3=1;
						}

						switch (alt3) {
						case 1 :
							// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:67:31: domain_item
							{
							pushFollow(FOLLOW_domain_item_in_definition74);
							domain_item();
							state._fsp--;

							}
							break;

						default :
							break loop3;
						}
					}

					match(input,13,FOLLOW_13_in_definition77); 
					}
					break;
				case 3 :
					// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:68:6: '(' 'define' initsit_header initsit_body ')'
					{
					match(input,12,FOLLOW_12_in_definition84); 
					match(input,45,FOLLOW_45_in_definition86); 
					pushFollow(FOLLOW_initsit_header_in_definition88);
					initsit_header();
					state._fsp--;

					pushFollow(FOLLOW_initsit_body_in_definition90);
					initsit_body();
					state._fsp--;

					match(input,13,FOLLOW_13_in_definition92); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "definition"



	// $ANTLR start "domain_header"
	// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:75:1: domain_header : '(' 'domain' NAME ')' ;
	public final void domain_header() throws RecognitionException {
		try {
			// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:76:2: ( '(' 'domain' NAME ')' )
			// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:76:4: '(' 'domain' NAME ')'
			{
			match(input,12,FOLLOW_12_in_domain_header107); 
			match(input,46,FOLLOW_46_in_domain_header109); 
			match(input,NAME,FOLLOW_NAME_in_domain_header111); 
			match(input,13,FOLLOW_13_in_domain_header113); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "domain_header"



	// $ANTLR start "domain_item"
	// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:79:1: domain_item : ( extension_def | require_def | types_def | constants_def | domain_vars_def | predicates_def | timeless_def | safety_def | structure_def );
	public final void domain_item() throws RecognitionException {
		try {
			// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:80:2: ( extension_def | require_def | types_def | constants_def | domain_vars_def | predicates_def | timeless_def | safety_def | structure_def )
			int alt5=9;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==12) ) {
				switch ( input.LA(2) ) {
				case 23:
					{
					alt5=1;
					}
					break;
				case 36:
					{
					alt5=2;
					}
					break;
				case 41:
					{
					alt5=3;
					}
					break;
				case 17:
					{
					alt5=4;
					}
					break;
				case 20:
					{
					alt5=5;
					}
					break;
				case 35:
					{
					alt5=6;
					}
					break;
				case 40:
					{
					alt5=7;
					}
					break;
				case 37:
					{
					alt5=8;
					}
					break;
				case 15:
				case 16:
				case 29:
					{
					alt5=9;
					}
					break;
				default:
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 5, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:80:4: extension_def
					{
					pushFollow(FOLLOW_extension_def_in_domain_item124);
					extension_def();
					state._fsp--;

					}
					break;
				case 2 :
					// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:81:4: require_def
					{
					pushFollow(FOLLOW_require_def_in_domain_item129);
					require_def();
					state._fsp--;

					}
					break;
				case 3 :
					// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:82:4: types_def
					{
					pushFollow(FOLLOW_types_def_in_domain_item134);
					types_def();
					state._fsp--;

					}
					break;
				case 4 :
					// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:83:4: constants_def
					{
					pushFollow(FOLLOW_constants_def_in_domain_item141);
					constants_def();
					state._fsp--;

					}
					break;
				case 5 :
					// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:84:4: domain_vars_def
					{
					pushFollow(FOLLOW_domain_vars_def_in_domain_item146);
					domain_vars_def();
					state._fsp--;

					}
					break;
				case 6 :
					// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:85:4: predicates_def
					{
					pushFollow(FOLLOW_predicates_def_in_domain_item152);
					predicates_def();
					state._fsp--;

					}
					break;
				case 7 :
					// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:86:4: timeless_def
					{
					pushFollow(FOLLOW_timeless_def_in_domain_item157);
					timeless_def();
					state._fsp--;

					}
					break;
				case 8 :
					// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:87:4: safety_def
					{
					pushFollow(FOLLOW_safety_def_in_domain_item162);
					safety_def();
					state._fsp--;

					}
					break;
				case 9 :
					// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:88:4: structure_def
					{
					pushFollow(FOLLOW_structure_def_in_domain_item168);
					structure_def();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "domain_item"



	// $ANTLR start "extension_def"
	// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:91:1: extension_def : '(' ':extends' ( NAME )+ ')' ;
	public final void extension_def() throws RecognitionException {
		try {
			// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:92:2: ( '(' ':extends' ( NAME )+ ')' )
			// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:92:4: '(' ':extends' ( NAME )+ ')'
			{
			match(input,12,FOLLOW_12_in_extension_def181); 
			match(input,23,FOLLOW_23_in_extension_def183); 
			// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:92:19: ( NAME )+
			int cnt6=0;
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==NAME) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:92:19: NAME
					{
					match(input,NAME,FOLLOW_NAME_in_extension_def185); 
					}
					break;

				default :
					if ( cnt6 >= 1 ) break loop6;
					EarlyExitException eee = new EarlyExitException(6, input);
					throw eee;
				}
				cnt6++;
			}

			match(input,13,FOLLOW_13_in_extension_def188); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "extension_def"



	// $ANTLR start "types_def"
	// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:95:1: types_def : '(' ':types' typed_list_of_name ')' ;
	public final void types_def() throws RecognitionException {
		try {
			// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:96:2: ( '(' ':types' typed_list_of_name ')' )
			// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:96:4: '(' ':types' typed_list_of_name ')'
			{
			match(input,12,FOLLOW_12_in_types_def201); 
			match(input,41,FOLLOW_41_in_types_def203); 
			pushFollow(FOLLOW_typed_list_of_name_in_types_def205);
			typed_list_of_name();
			state._fsp--;

			match(input,13,FOLLOW_13_in_types_def207); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "types_def"



	// $ANTLR start "constants_def"
	// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:99:1: constants_def : '(' ':constants' typed_list_of_name ')' ;
	public final void constants_def() throws RecognitionException {
		try {
			// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:100:2: ( '(' ':constants' typed_list_of_name ')' )
			// /home/tomek/Projekty/PUT/GUI4PDDL/pl.poznan.put.cs.gui4pddl/src/pl/poznan/put/cs/gui4pddl/parser/PDDL.g:100:4: '(' ':constants' typed_list_of_name ')'
			{
			match(input,12,FOLLOW_12_in_constants_def219); 
			match(input,17,FOLLOW_17_in_constants_def221); 
			pushFollow(FOLLOW_typed_list_of_name_in_constants_def223);
			typed_list_of_name();
			state._fsp--;

			match(input,13,FOLLOW_13_in_constants_def225); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "constants_def"


